# Compile_Framework

./: README.md
scripts_build_project/: README.md  build.sh
scripts_build_project/Apps/IPC_er/: CMakeLists.txt
scripts_build_project/Apps/IPC_er/src/App/: server.c
scripts_build_project/Apps/MainApp/: CMakeLists.txt
scripts_build_project/Apps/MainApp/src/App/: AppMain.cpp
scripts_build_project/Apps/MainApp/src/Common/include/: common.h
scripts_build_project/Apps/MainApp/src/Mw/CV/: MwCv.cpp
scripts_build_project/Apps/MainApp/src/Mw/Camera/: MwCamera.c
scripts_build_project/Apps/MainApp/src/Mw/NetComm/: MwNetComm.cpp
scripts_build_project/Apps/MainApp/src/Mw/include/: MwCamera.h  MwCv.h  MwNetComm.h
scripts_build_project/Apps/MainApp/src/Sys/include/: sysApi.h
scripts_build_project/Apps/MainApp/src/Sys/system/: msg_buf.c  tsk.c
scripts_build_project/Apps/NetClientApp/: CMakeLists.txt
scripts_build_project/Apps/NetClientApp/src/App/: client.c
scripts_build_project/Apps/TestApp/: CMakeLists.txt
scripts_build_project/Apps/TestApp/src/App/: test_main.c
scripts_build_project/scripts/MainApp/: MainApp-build.sh
scripts_build_project/scripts/NetClientApp/: NetClientApp-build.sh
scripts_build_project/scripts/TestApp/: TestApp-build.sh
scripts_build_project/scripts/mjpg-stream/: mjpg-build.sh
scripts_build_project/work/: run.sh
